--- a/package.json
+++ b/package.json
@@ -65,6 +65,8 @@
     "react-dom": "^0.14.0 || ^15.0.0 || ^16.0.0-beta || ^16.0.0"
   },
   "dependencies": {
+    "ansi-html": "0.0.7",
+    "ansi-to-html": "^0.6.4",
     "error-stack-parser": "^1.3.6",
     "object-assign": "^4.0.1",
     "prop-types": "^15.5.4",
